--- a/notebooks/02_jupyter/02-Jupyter-FTW2019.ipynb
+++ b/notebooks/02_jupyter/02-Jupyter-FTW2019.ipynb
@@ -293,7 +293,7 @@
    "outputs": [],
    "source": [
     "%%file text.txt\n",
-    "\"PyconES 2018\""
+    "\"Felanitx Tech Weekend 2019\""
    ]
   },
   {
@@ -358,7 +358,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
